<resources>

    <!--  General  -->
    
    <string name="app_name">Travel.ly</string>
    <string name="title_activity_main">Travel.ly</string>
    <string name="welcome">Welcome to travel.ly application for Android</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty"></string>
    <string name="no_internet_connection">No internet connection</string>
    
    <!--  Sections  -->
    
    <string name="favorites_title">Favorites</string>
    <string name="comments_title">Comments</string>
    <string name="deals_title">Deals</string>
    
    <string name="menu_settings">Settings</string>
    
		
    <!--  Comment Section  -->
    
    <string name="flight_number_hint">Insert your flight number</string>
    	
	<string name="food_rating">Food</string>
	<string name="kindness_rating">Kindness</string>
	<string name="mileage_program_rating">Mileage Program</string>
	<string name="comfort_rating">Comfort</string>
	<string name="price_quality_rating">Price-Quality Relation</string>
	<string name="punctuality_rating">Punctuality</string>
	<string name="recommend_text">Recommend this flight</string>
	<string name="comments">Comments</string>
	<string name="successfull_comment">Comment Send</string>
	<string name="failed_to_comment">Couldnt send comment</string>
	<string name="invalid_airline">Invalid Airline</string>
	<string name="invalid_flight_number">Invalid Flight Number</string>
	
	<string name="rating_button">Send Comment</string>
	
	
	<!--  Favorites Section  -->
	
	<string name="favorites_button_add">Add</string>
	<string name="flight_number_hint_small">Flight Number</string>
	<string name="airline_hint_small">Airline</string>
	<string name="flight_already_on_favorites">Flight already on favorites</string>
	<string name="flight">Flight</string>
	
	<!--  Flight Information Section  -->
	
	<string name="flight_info_title">Flight Information</string>
	<string name="column_notify_title">Notify me when changed</string>
	<string name="departure_city">Departure city</string>
	<string name="arrival_city">Arrival city</string>
	<string name="airline_name">Airline</string>
	<string name="airport_terminal">Terminal</string>
	<string name="airport_gate">Gate</string>
	<string name="flight_status">Status</string>
	<string name="scheduled_time">Scheduled time</string>
	<string name="flight_number">Flight number</string>
	<string name="remove_favorite_button">Remove favorite</string>
	<string name="accept_preference_changes">Accept</string>
	
	<!--  Flight Status Section  -->
	
	<string name="scheduled">Scheduled</string>
	<string name="active">Active</string>
	<string name="deviated">Deviated</string>
	<string name="landed">Landed</string>
	<string name="cancelled">Cancelled</string>
	<string name="unknown">Unknown</string>
	
	<!--  Settings Section  -->
	
	<string name="notifications">Notifications</string>
	
	<!--  Notifications section  -->
	
	<string name="notification_title">Changes on Flight </string>
	

</resources>